# pcc

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-pypi.yml  publish.yml
experiments/: exp_00.yaml
src/: dataset.py  explorer.py  metric.py  models.py  train.py  utils.py
src/pcc/: __init__.py  config.py  params.py  utils.py
src/pcc/configs/: default.yaml  sweep.py
src/pcc/configs/data/: data_00.yaml
src/pcc/configs/hyperparams/: hyp_00.yaml
src/pcc/dataset/: __init__.py  dataset.py  explorer.py
src/pcc/evaluation/: metric.py
src/pcc/module/: activation.py  convolution.py  net.py  normalization.py
src/pcc/train/: main.py  tools.py  train.py
