[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcc-sampler"
version = "0.1.0"
description = "Synthetic complex-valued phase-coherence sample generator"
authors = [
    { name = "Meisam Ashraf", email = "meisash@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
    "torch>=2.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pcc = ["configs/*.yaml"]

[tool.uv]
package = true
