[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcc-sampler"
version = "0.1.0"
description = "Synthetic complex-valued phase-coherence sample generator"
authors = [
    { name = "Meisam Ashraf", email = "meisash@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["complex-valued", "phase-coherence", "synthetic-data", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "torch>=2.2",
]

[project.urls]
Homepage = "https://github.com/meis-01/pcc"
Repository = "https://github.com/meis-01/pcc"
Issues = "https://github.com/meis-01/pcc/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pcc = ["configs/*.yaml"]

[tool.uv]
package = true
